fix local/prod serve API proxy and update source filters

--- a/src/app/core/components/job-filters/job-filters.html
+++ b/src/app/core/components/job-filters/job-filters.html
@@ -47,12 +47,12 @@
         <input
           type="radio"
           name="fonte"
-          [value]="f"
+          [value]="f.value"
           [(ngModel)]="fonte"
           (change)="emit()"
         />
         <span class="custom-radio"></span>
-        <span>{{ f }}</span>
+        <span>{{ f.label }}</span>
       </label>
     </div>
   </div>
