--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen flex flex-col bg-slate-50 text-slate-800">
+<div class="min-h-screen flex flex-col bg-stone-100 text-stone-800">
 
   <main class="flex-1">
     <router-outlet></router-outlet>
